# dossier

./: Dockerfile  Makefile  README.md  bower-lite  build.py  lint-requirements.txt  package.json  pyproject.toml  requirements.txt  setup.py  test-requirements.txt
crds/: spawner.yaml
dossier/: app.py  spawner.py  utils.py
dossier/auth/: oauth.py
dossier/handlers/: __init__.py  login.py  pages.py
dossier/spawners/: kubernetes.py  kubespawner.py  ssh.py  sshspawner.py
helm/: jupyterhub-values.yaml
kubernetes/authentication/: README.md  keycloak-values.yaml
kubernetes/authorization/: README.md  capsule-values.yaml
kubernetes/ingress-controller/: README.md  certmanager-values.yaml
kubernetes/jupyter/: README.md  jupyterhub-config.yaml  postgresql-config.yaml
share/jupyterhub/dossier/templates/: page.html  spawners.html  tenants.html
share/jupyterhub/static/dossier/less/: mixins.less  page.less  style.less  variables.less
share/jupyterhub/templates/dossier/: page.html  spawners.html  tenants.html
